# mosaic

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  project-notes.md
mosaic/: __init__.py  cli.py  report.py
mosaic/agent/: __init__.py  loop.py
mosaic/embedding/: __init__.py  encoder.py  image_features.py
mosaic/hypergraph/: __init__.py  graph.py
mosaic/ingestion/: __init__.py  tiler.py
mosaic/retrieval/: __init__.py  vector.py
mosaic/sidecar/: __init__.py  models.py
mosaic/storage/: __init__.py  json_store.py
scripts/: demo.py  demo_video.py  loc.py
tests/: test_agent_retrieval.py  test_cli.py  test_demo.py  test_demo_video.py  test_image_features.py  test_loc.py  test_retrieval.py  test_storage.py
