[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mosaic"
version = "0.1.0"
description = "Agentic pixel-hypergraph memory system — documents as tiles, relationships as structure"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0",
    "numpy>=1.26",
    "networkx>=3.2",
    "ollama>=0.2",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
mosaic = "mosaic.cli:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
